removed index before exp. csv all years

--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1995_index</td>\n",
        "      <td>monarchs1995</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1995_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1995_index  monarchs1995         3   \n",
+       "0  index  ix_monarchs1995_index  monarchs1995         4   \n",
        "1  table           monarchs1995  monarchs1995         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "9       Andover        KS"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "9                 Chinqua    Michoacán"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "4         MEXICO"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "9       Sep       24     1995  Sep 24 1995"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
        "9       Mar              1996    Mar  1996"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "      <td>AU 646</td>\n",
        "      <td>NY</td>\n",
        "      <td>Sep 19 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Feb  1996</td>\n",
        "      <td>2580.0</td>\n",
@@ -1144,7 +1144,7 @@
        "      <td>BW 003</td>\n",
        "      <td>MD</td>\n",
        "      <td>Sep 14 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Dec  1995</td>\n",
        "      <td>2285.0</td>\n",
@@ -1154,7 +1154,7 @@
        "      <td>AN 008</td>\n",
        "      <td>MN</td>\n",
        "      <td>Sep 4 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Mar 1 1996</td>\n",
        "      <td>1990.0</td>\n",
@@ -1164,7 +1164,7 @@
        "      <td>AG 802</td>\n",
        "      <td>IA</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Mar  1996</td>\n",
        "      <td>1820.0</td>\n",
@@ -1174,7 +1174,7 @@
        "      <td>CU 878</td>\n",
        "      <td>KS</td>\n",
        "      <td>Sep 23 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Mar  1996</td>\n",
        "      <td>1555.0</td>\n",
@@ -1184,7 +1184,7 @@
        "      <td>BP 359</td>\n",
        "      <td>KS</td>\n",
        "      <td>Sep 18 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Feb 24 1996</td>\n",
        "      <td>1510.0</td>\n",
@@ -1194,7 +1194,7 @@
        "      <td>BP 652</td>\n",
        "      <td>KS</td>\n",
        "      <td>Sep 18 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Mar  1996</td>\n",
        "      <td>1510.0</td>\n",
@@ -1204,7 +1204,7 @@
        "      <td>BO 299</td>\n",
        "      <td>KS</td>\n",
        "      <td>Oct 1 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Jan 15 1996</td>\n",
        "      <td>1500.0</td>\n",
@@ -1214,7 +1214,7 @@
        "      <td>CM 355</td>\n",
        "      <td>AR</td>\n",
        "      <td>Sep 25 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Dec 30 1995</td>\n",
        "      <td>1445.0</td>\n",
@@ -1224,7 +1224,7 @@
        "      <td>CJ 954</td>\n",
        "      <td>KS</td>\n",
        "      <td>Sep 24 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Mar  1996</td>\n",
        "      <td>1445.0</td>\n",
@@ -1234,7 +1234,7 @@
        "      <td>AS 887</td>\n",
        "      <td>KS</td>\n",
        "      <td>Sep 23 1995</td>\n",
-       "      <td>Mexico</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Mar  1996</td>\n",
        "      <td>1440.0</td>\n",
@@ -1655,23 +1655,23 @@
       ],
       "text/plain": [
        "   Tag No. Tag State     Tag Date Report State Report Country  Report Date  \\\n",
-       "0   AU 646        NY  Sep 19 1995       Mexico         MEXICO    Feb  1996   \n",
-       "1   BW 003        MD  Sep 14 1995       Mexico         MEXICO    Dec  1995   \n",
-       "2   AN 008        MN   Sep 4 1995       Mexico         MEXICO   Mar 1 1996   \n",
-       "3   AG 802        IA          NaN       Mexico         MEXICO    Mar  1996   \n",
-       "4   CU 878        KS  Sep 23 1995       Mexico         MEXICO    Mar  1996   \n",
-       "5   BP 359        KS  Sep 18 1995       Mexico         MEXICO  Feb 24 1996   \n",
-       "6   BP 652        KS  Sep 18 1995       Mexico         MEXICO    Mar  1996   \n",
-       "7   BO 299        KS   Oct 1 1995       Mexico         MEXICO  Jan 15 1996   \n",
-       "8   CM 355        AR  Sep 25 1995       Mexico         MEXICO  Dec 30 1995   \n",
-       "9   CJ 954        KS  Sep 24 1995       Mexico         MEXICO    Mar  1996   \n",
-       "10  AS 887        KS  Sep 23 1995       Mexico         MEXICO    Mar  1996   \n",
+       "0   AU 646        NY  Sep 19 1995    Michoacán         MEXICO    Feb  1996   \n",
+       "1   BW 003        MD  Sep 14 1995    Michoacán         MEXICO    Dec  1995   \n",
+       "2   AN 008        MN   Sep 4 1995    Michoacán         MEXICO   Mar 1 1996   \n",
+       "3   AG 802        IA          NaN    Michoacán         MEXICO    Mar  1996   \n",
+       "4   CU 878        KS  Sep 23 1995    Michoacán         MEXICO    Mar  1996   \n",
+       "5   BP 359        KS  Sep 18 1995    Michoacán         MEXICO  Feb 24 1996   \n",
+       "6   BP 652        KS  Sep 18 1995    Michoacán         MEXICO    Mar  1996   \n",
+       "7   BO 299        KS   Oct 1 1995    Michoacán         MEXICO  Jan 15 1996   \n",
+       "8   CM 355        AR  Sep 25 1995    Michoacán         MEXICO  Dec 30 1995   \n",
+       "9   CJ 954        KS  Sep 24 1995    Michoacán         MEXICO    Mar  1996   \n",
+       "10  AS 887        KS  Sep 23 1995    Michoacán         MEXICO    Mar  1996   \n",
        "11  AM 907        KS  Sep 27 1995           TX            USA  Oct 19 1995   \n",
        "12  BH 331        OH          NaN           IL            USA   Oct 3 1995   \n",
        "13  AS 610        KS  Sep 20 1995           OK            USA   Oct 4 1995   \n",
        "14  AU 652        NY  Sep 29 1995           CT            USA  Oct 12 1995   \n",
        "15  CG 235        KS  Sep 18 1995           KS            USA  Sep 29 1995   \n",
-       "16  AO 022       NH           NaN          NY:            USA  Sep 22 1995   \n",
+       "16  AO 022        NH          NaN          NY:            USA  Sep 22 1995   \n",
        "17  CM 577        PA  Oct 12 1995           PA            USA  Oct 27 1995   \n",
        "18  BO 125        KS  Sep 22 1995           KS            USA  Sep 23 1995   \n",
        "19  CK 683        KS  Sep 20 1995           KS            USA  Sep 25 1995   \n",
@@ -1763,7 +1763,7 @@
        "51     NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,20 +1785,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: Report Country, dtype: int64)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
     "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
@@ -1815,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1820,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,11 +1849,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1995.csv\")"
+    "new_table.to_csv(\"Monarchs1995.csv\", index = False)"
    ]
   }
  ],
